--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,16 @@ html, body,
 	height: 100%; 
 }
 
+#layer {
+	color: #ddd;
+	position: absolute;
+	height: 100%;
+	background: #A2A6A9 url(../images/background.jpg);
+	background-repeat: repeat-y;
+	width: inherit;
+	z-index: -1;
+}
+
 @mixin horizontal-center() {
   display: -webkit-box;
   display: -moz-box;
@@ -144,37 +154,36 @@ body {
 	margin: 0 auto;
 	section {
 		/*background: url(../images/background.jpg);*/
-		background-color: #A2A6A9;
+		/*background-color: #A2A6A9;*/
 	}
 }
 
 #fbsection1 {
-	background-color: #A2A6A9;
-	background-image: url(../images/phase1-12.png);
+	/*background-image: url(../images/phase1-12.png);*/
+	background-image: url(../images/test1.png);
 }
 
 #fbsection2 {
-	background-color: #A2A6A9;
-	background-image: url(../images/phase2-13.png);
+	/*background-image: url(../images/phase2-13.png);*/
+	background-image: url(../images/test2.png);
 }
 
 #fbsection3 {
-	background-color: #A2A6A9;
-	background-image: url(../images/phase3-12.png);
+	/*background-image: url(../images/phase3-12.png);*/
+	background-image: url(../images/test3.png);
 }
 
 #fbsection4 {
-	background-color: #A2A6A9;
-	background-image: url(../images/phase5-12.png);
+	/*background-image: url(../images/phase5-12.png);*/
+	background-image: url(../images/test4.png);
 }
 
 #fbsection5 {
-	background-color: #A2A6A9;
-	background-image: url(../images/phase6-12.png);
+	/*background-image: url(../images/phase6-12.png);*/
+	background-image: url(../images/test5.png);
 }
 
 #fbsection6 {
-	background-color: #A2A6A9;
 }
 
 /* 1/10 */
@@ -209,7 +218,8 @@ body {
 
 /* 1 */
 #fbsection6 {
-	background-image: url(../images/phase6-12.png);
+	/*background-image: url(../images/phase6-12.png);*/
+	background-image: url(../images/test5.png);
 	height: 100%;
 }
 
