update images and css

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -744,27 +744,27 @@ a.zoomable:hover span.zoom_icon {
 		margin: 0 auto;
 	}
 	#fbsection1 {
-		background-image: url(../images/ie-phase1-12-e.png);
+		background-image: url(../images/ie-phase1-12-e.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection2 {
-		background-image: url(../images/ie-phase2-12-e.png);
+		background-image: url(../images/ie-phase2-12-e.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection3 {
-		background-image: url(../images/ie-phase3-12-e.png);
+		background-image: url(../images/ie-phase3-12-e.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection4 {
-		background-image: url(../images/ie-phase5-12-e.png);
+		background-image: url(../images/ie-phase5-12-e.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection5 {
-		background-image: url(../images/ie-phase6-12-e.png);
+		background-image: url(../images/ie-phase6-12-e.jpg);
 		height: 1153px;
 		margin: 0 auto;
 	}
