--- a/sass/style.scss
+++ b/sass/style.scss
@@ -864,7 +864,7 @@ a.zoomable:hover span.zoom_icon {
 			display: block;
 			position: absolute;
 			right: 0;
-			top: 50%;
+			top: 481px;
 			width: 50%;
 			z-index: 0;
 		}
