--- a/sass/style.scss
+++ b/sass/style.scss
@@ -863,7 +863,7 @@ a.zoomable:hover span.zoom_icon {
 		#flashContent_right {
 			display: block;
 			position: absolute;
-			right: 0;
+			right: -70px;
 			top: 481px;
 			width: 50%;
 			z-index: 0;
