cleaning up css

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -68,8 +68,7 @@ body {
 #cbp-fbscroller {
 	position: relative;
 }
-/* The nav is fixed on the right side  and we center it by translating it 50% 
-(we don't know it's height so we can't use the negative margin trick) */
+
 .cbp-fbscroller > nav {
 	left: 0;
 	margin: 0 auto;
@@ -397,38 +396,24 @@ body {
 		}
 	}
 	/* flash */
-	#bg_left {
+	#bg_left,
+	#bg_right{
 		background: url(../images/bg_flash2.png) no-repeat top center;
 		background-position-y: -5px;
 		display: block;
-		left: 0;
 		position: absolute;
-		right: 0;
 		top: 50%;
 		z-index: -1;
 		width: 585px;
 		height: 200px;
+	}
+	#bg_left {
+		left: 0;
 	}
 	#bg_right {
-		background: url(../images/bg_flash2.png) no-repeat top center;
-		background-position-y: -5px;
-		display: block;
-		position: absolute;
 		right: 0;
-		top: 50%;
-		z-index: -1;
-		width: 585px;
-		height: 200px;
 	}
-	#flashContent_left {
-		display: block;
-		left: -10px;
-		position: absolute;
-		right: 0;
-		top: 50%;
-		width: 50%;
-		z-index: 0;
-	}
+	#flashContent_left,
 	#flashContent_right {
 		display: block;
 		position: absolute;
@@ -436,6 +421,12 @@ body {
 		top: 50%;
 		width: 50%;
 		z-index: 0;
+	}
+	#flashContent_left {
+		left: -10px;
+	}
+	#flashContent_right {
+		right: -10px;
 	}
 }
 
@@ -622,14 +613,6 @@ body {
 	}
 }
 
-#exception {
-	height: 420px;
-	background-image: url(../images/phase6-12.png);
-	background-position: top center;
-	background-repeat: no-repeat;
-	background-size: auto 100%;
-}
-
 .oil {
 	left: 64px;
 	position: absolute;
@@ -637,7 +620,6 @@ body {
 	z-index: 10000000;
 	width: 450px;
 }
-
 
 #video-wrapper {
 	@include horizontal-center();
@@ -673,7 +655,7 @@ footer {
 
 /* 
  * PLEASE DO NOT TOUCH !!!
- * For video player and button seeting
+ * For video player and button setting
  */
 
 a {
@@ -810,7 +792,6 @@ a.zoomable:hover span.zoom_icon {
 	#fbsection6 {
 		display: none !important;
 	}
-
 	#fbsection1 .content-layer p,
 	#fbsection2 .content-layer p,
 	#fbsection3 .content-layer p#parag1,
@@ -911,28 +892,6 @@ a.zoomable:hover span.zoom_icon {
 	#fbsection5 ul {
 		height: 100px;
 		z-index: 99 !important;
-  	a:nth-child(odd) {
-  		li {
-  			position: absolute;
-  			z-index: 10000;
-  			left: 375px;
-  			right: 0;
-  			top: 230px;
-  		}
-  	}
-  	a:nth-child(even) {
-  		li {
-  			left: 0;
-  			margin-top: -80px;
-  			margin-left: -80px;
-  			position: absolute;
-  			right: 0;
-  			z-index: 10000;
-  			width: 750px;
-  			float: right;
-  			top: 230px;
-  		}
-  	}
   	a#tab1 {
   		left: 50px;
   		top: 0px;
@@ -1023,7 +982,6 @@ a.zoomable:hover span.zoom_icon {
   		}
   	}
   }
-
 	/* video */
 	a.zoomable {
 		display: block;
