--- a/sass/style.scss
+++ b/sass/style.scss
@@ -803,6 +803,9 @@ a.zoomable:hover span.zoom_icon {
 		h1 {
 			margin: 105px 0 0;
 		}
+		p#parag1 {
+			width: 80%;
+		}
 	}
 
 	#fbsection4 .content-layer {
