--- a/sass/style.scss
+++ b/sass/style.scss
@@ -766,7 +766,7 @@ a.zoomable {
 	.container {
 		background-size: 100% auto;
 		background-repeat: repeat;
-		height: 4155px;
+		height: 3813x;
 		width: 997px;
 		margin: 0 auto;
 	}
