optimizing image size

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -752,27 +752,27 @@ a.zoomable {
 		margin: 0 auto;
 	}
 	#fbsection1 {
-		background-image: url(../images/ie-phase1.jpg);
+		background-image: url(../images/test-ie-phase1.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection2 {
-		background-image: url(../images/ie-phase2.jpg);
+		background-image: url(../images/test-ie-phase2.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection3 {
-		background-image: url(../images/ie-phase3.jpg);
+		background-image: url(../images/test-ie-phase3.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection4 {
-		background-image: url(../images/ie-phase5.jpg);
+		background-image: url(../images/test-ie-phase5.jpg);
 		height: 848px;
 		margin: 0 auto;
 	}
 	#fbsection5 {
-		background-image: url(../images/ie-phase6.jpg);
+		background-image: url(../images/test-ie-phase6.jpg);
 		height: 1153px;
 		margin: 0 auto;
 	}
