--- a/sass/style.scss
+++ b/sass/style.scss
@@ -747,7 +747,8 @@ a.zoomable {
 	.container {
 		background-size: 100% auto;
 		background-repeat: repeat;
-		height: 3813px;
+		/*height: 3813px;*/
+		height: 3413px;
 		width: 997px;
 		margin: 0 auto;
 	}
@@ -759,17 +760,17 @@ a.zoomable {
 	}
 	#fbsection2 {
 		background-image: url(../images/test-ie-phase2.jpg);
-		height: 848px;
+		height: 783px;
 		margin: 0 auto;
 	}
 	#fbsection3 {
 		background-image: url(../images/test-ie-phase3.jpg);
-		height: 848px;
+		height: 783px;
 		margin: 0 auto;
 	}
 	#fbsection4 {
 		background-image: url(../images/test-ie-phase5.jpg);
-		height: 848px;
+		height: 783px;
 		margin: 0 auto;
 	}
 	#fbsection5 {
