--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,10 @@ html, body,
 	height: 100%; 
 }
 
+/*.cbp-fbscroller section#fbsection5 {
+	height: 150% !important;
+}
+*/
 #layer {
 	background: #A2A6A9 url(../images/background.jpg);
 	background-repeat: repeat-y;
