--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,16 +6,48 @@ html, body,
 	height: 100%; 
 }
 
-/*.cbp-fbscroller section#fbsection5 {
+.cbp-fbscroller section#fbsection5.p110{
+	height: 110% !important;
+}
+
+.cbp-fbscroller section#fbsection5.p120{
+	height: 120% !important;
+}
+
+.cbp-fbscroller section#fbsection5.p130{
+	height: 130% !important;
+}
+
+.cbp-fbscroller section#fbsection5.p140{
+	height: 140% !important;
+}
+
+.cbp-fbscroller section#fbsection5.p150{
 	height: 150% !important;
 }
-*/
+
+.cbp-fbscroller section#fbsection5.p170{
+	height: 170% !important;
+}
+
+.cbp-fbscroller section#fbsection5.p180{
+	height: 180% !important;
+}
+
+.cbp-fbscroller section#fbsection5.p190{
+	height: 190% !important;
+}
+
+.cbp-fbscroller section#fbsection5.p200{
+	height: 200% !important;
+}
+
 #layer {
 	background: #A2A6A9 url(../images/background.jpg);
 	background-repeat: repeat-y;
 	color: #ddd;
 	height: 100%;
-	min-height: 2763px;
+	/*min-height: 2763px;*/
 	position: absolute;
 	width: inherit;
 	z-index: -1;
@@ -137,61 +169,114 @@ body {
 
 #fbsection1 {
 	/*background-image: url(../images/phase1-12.png);*/
+	/*background-image: url(../images/test1.png);*/
+	/*background: #A2A6A9 url(../images/background.jpg);*/
+	background-color: #A2A6A9;
 	background-image: url(../images/test1.png);
 }
 
 #fbsection2 {
 	/*background-image: url(../images/phase2-13.png);*/
+	background-color: #A2A6A9;
 	background-image: url(../images/test2.png);
 }
 
 #fbsection3 {
 	/*background-image: url(../images/phase3-12.png);*/
+	background-color: #A2A6A9;
 	background-image: url(../images/test3.png);
 }
 
 #fbsection4 {
 	/*background-image: url(../images/phase5-12.png);*/
+	background-color: #A2A6A9;
 	background-image: url(../images/test4.png);
 }
 
-#fbsection5 {
+#fbsection5.p110 {
 	/*background-image: url(../images/phase6-12.png);*/
-	background-image: url(../images/test5.png);
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-110.png);
+}
+#fbsection5.p120 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-120.png);
+}
+#fbsection5.p130 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-130.png);
+}
+#fbsection5.p140 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-140.png);
+}
+#fbsection5.p150 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-150.png);
+}
+#fbsection5.p170 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-170.png);
+}
+#fbsection5.p180 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-180.png);
+}
+#fbsection5.p190 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-190.png);
+}
+#fbsection5.p200 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-200.png);
 }
 
 /* 1/10 */
 #fbsection6.oneandten {
+	background-color: #A2A6A9;
 	background-image: url(../images/oneandten.png);
 	height: 10%;
 }
 
 /* 1/4 */
 #fbsection6.oneandfour {
+	background-color: #A2A6A9;
 	background-image: url(../images/oneandfour.png);
 	height: 25%;
 }
 
 /* 2/5 */
 #fbsection6.twoandfive {
+	background-color: #A2A6A9;
 	background-image: url(../images/twoandfive.png);
 	height: 40%;
 }
 
 /* 1/2 */
 #fbsection6.half {
+	background-color: #A2A6A9;
 	background-image: url(../images/half.png);
 	height: 50%;
 }
 
 /* 3/4 */
 #fbsection6.threeandfour {
+	background-color: #A2A6A9;
 	background-image: url(../images/threeandfour.png);
 	height: 75%;
 }
 
 /* 1 */
 #fbsection6 {
+	background-color: #A2A6A9;
 	background-image: url(../images/test5.png);
 	height: 100%;
 }
@@ -381,7 +466,7 @@ body {
 		display: block;
 		position: absolute;
 		top: 50%;
-		z-index: -1;
+		z-index: 0;
 		width: 585px;
 		height: 200px;
 	}
@@ -604,13 +689,40 @@ body {
 	@include vertical-center();
 	position: relative;
 	top: 30%;
-	width: 50%;
-	height: 45%;	margin: 0 auto;
+	width: 100%;
+	height: 45%;	
+	margin: 0 auto;
 	z-index: 9999999 !important;
 	border-radius: 300px;
-	video {
-		margin: 0 auto;
+	#popup-video {
+	  display: none;
 	}
+	#popup-video.open {	
+	  display: block;
+	  height: 100%;
+	  position: relative;
+	  width: 100%;
+	}
+/*	video {
+	  margin: 0 auto;
+	}*/
+}
+
+#openVideoBtn {
+	border: 1px solid red;
+	border-radius: 300px;
+	display: block;
+	height: 100%;
+	left: 200px;
+	position: absolute;
+	width: 50%;
+}
+
+#closeVideoBtn {
+	border: 1px solid green;
+	height: 100%;
+	position: relative;
+	width: 100%;
 }
 
 @-moz-document url-prefix() { 
