update theme and height adjustment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,35 +9,30 @@ html, body,
 .cbp-fbscroller section#fbsection5.p110{
 	height: 110% !important;
 }
-
 .cbp-fbscroller section#fbsection5.p120{
 	height: 120% !important;
 }
-
 .cbp-fbscroller section#fbsection5.p130{
 	height: 130% !important;
 }
-
 .cbp-fbscroller section#fbsection5.p140{
 	height: 140% !important;
 }
-
 .cbp-fbscroller section#fbsection5.p150{
 	height: 150% !important;
 }
-
+.cbp-fbscroller section#fbsection5.p160{
+	height: 160% !important;
+}
 .cbp-fbscroller section#fbsection5.p170{
 	height: 170% !important;
 }
-
 .cbp-fbscroller section#fbsection5.p180{
 	height: 180% !important;
 }
-
 .cbp-fbscroller section#fbsection5.p190{
 	height: 190% !important;
 }
-
 .cbp-fbscroller section#fbsection5.p200{
 	height: 200% !important;
 }
@@ -217,6 +212,11 @@ body {
 	/*background-image: url(../images/phase6-12.png);*/
 	background-color: #A2A6A9;
 	background-image: url(../images/test5-150.png);
+}
+#fbsection5.p160 {
+	/*background-image: url(../images/phase6-12.png);*/
+	background-color: #A2A6A9;
+	background-image: url(../images/test5-160.png);
 }
 #fbsection5.p170 {
 	/*background-image: url(../images/phase6-12.png);*/
