put fixed background layer

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -37,13 +37,11 @@ html, body,
 	height: 200% !important;
 }
 
-#layer {
+#fixedlayer {
+	border: 1px solid green;
 	background: #A2A6A9 url(../images/background.jpg);
-	background-repeat: repeat-y;
-	color: #ddd;
 	height: 100%;
-	/*min-height: 2763px;*/
-	position: absolute;
+	position: fixed;
 	width: inherit;
 	z-index: -1;
 }
@@ -694,9 +692,6 @@ body {
 	margin: 0 auto;
 	z-index: 9999999 !important;
 	border-radius: 300px;
-/*	video {
-	  margin: 0 auto;
-	}*/
 }
 
 @-moz-document url-prefix() { 
